Optimize commands, adapt chunk checks and teleports for Folia/Paper/Spigot compatibility